# Hachi

./: Cargo.toml  LICENSE  README.md  bench.sh  justfile
benches/: hachi.rs
scripts/: barrett_butterfly.py  barrett_fake.py  barrett_fake_32.py  barrett_ibutterfly.py  barrett_mul.py  barrett_point_mul.py  barrett_sage_test.py  dotproduct.py  find_rns.py  head.txt  intt.py  intt_parameter.py  montproduct.py  ntt.py  ntt_parameter.py  rns.py
scripts/test/: barrett_fake.py
src/: commit.rs  foldwitness.rs  foldwitness_jolt.rs  lib.rs  macro.rs  main.rs  rns.rs  sumcheck.rs  tmp.rs
src/field/: fields.rs  macros.rs  rns.rs
src/fields/: fields.rs
src/hachi/: commit.rs  mod.rs  prove.rs  setup.rs  verify.rs
src/math/: eq.rs  field_simd.rs  fields.rs  mod.rs  rns.rs
src/mlp/: eval.rs  mle.rs  mod.rs
src/ntt/: dotproduct.rs  intt.rs  mod.rs  ntt.rs  transpose.rs
src/prep/: commit.rs  foldwitness.rs  mod.rs
src/ring/NTT/: f26113.rs  mod.rs  transpose.rs
src/ring/field/: fields.rs  macros.rs  mod.rs  rns.rs
src/sumcheck/: prove.rs  verify.rs
src/utils/: ds.rs  fs.rs  mod.rs  random.rs  serialize.rs  size.rs
tests/: determinism.rs  end_to_end.rs
