[package]
name = "ntt_avx512_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe-ntt = { version = "0.6.1", features = ["nightly"] }
rand = "0.8"
pulp = "0.21.5"
bytemuck = { version = "1.24", features = ["avx512_simd", "extern_crate_std"] }
rayon = "1.11.0"

[lints.rust]
warnings = "allow"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
